# libsodium

./: .gitignore  CMakeLists.txt  README.md
src/libsodium/include/sodium/: version.h
src/libsodium/include/sodium/private/: common.h
